--- a/css/style.scss
+++ b/css/style.scss
@@ -8,13 +8,19 @@
   visibility: hidden;
 }
 
-@mixin clearfix(){
-  &:after {
-    content: ".";
-    display: block;
-    height: 0;
-    clear: both;
-    visibility: hidden;
+@mixin generate-cat-head-states(){
+  @for $i from 1 through 8 {
+    .state.state-head-#{$i} {
+      background-image: url(../images/cat_transition/s0#{$i}.png);
+    }
+  }
+}
+
+@mixin generate-cat-smiling-states(){
+  @for $i from 1 through 4 {
+    .state.state-smiling-#{$i} {
+      background-image: url(../images/cat_smiling/s0#{$i}.png);
+    }
   }
 }
 
@@ -75,7 +81,7 @@ Wrapping all content to prevent horizontal scrolling.
   top: 0;
   z-index: 2;
   width: 15px;
-  height: 10000px;
+  height: 15000px;
   background:yellow;
   
   div{
@@ -564,19 +570,35 @@ Wrapping all content to prevent horizontal scrolling.
     left: 225em;
     top: 25em;
     
-    .cat-shape{  
+    .cat-head{
       width: 20.75em;
       height: 20.75em;
       font-size: 80%;
-      background: url(../images/cat_smiling/s04.png) top left no-repeat;
-      background-size: contain;
       position: absolute;
       left: 12rem;
       z-index: 5;
       
       // subtle float animation
-      @extend .anim-floating
-    }    
+      @extend .anim-floating;
+      
+      outline: 1px solid red; 
+
+      .state{
+        width: 100%;
+        height: 100%;
+        background-position: top left;
+        background-repeat: no-repeat;
+        background-size: contain;
+        opacity: 0;
+        position: absolute;
+        top: 0;
+        left: 0;
+      } 
+
+      @include generate-cat-head-states();
+      @include generate-cat-smiling-states();
+    }
+    
     
     .content-wrapper{
       width: 100%;
