--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ Wrapping all content to prevent horizontal scrolling.
   top: 0;
   z-index: 2;
   width: 15px;
-  height: 15000px;
+  height: 1000px;
   background: yellow; }
   #timeline div {
     position: absolute;
@@ -356,8 +356,7 @@ Wrapping all content to prevent horizontal scrolling.
       float: right;
       margin-top: 13rem;
       -webkit-shape-margin: 1rem;
-      font-size: 5px;
-      /*  outline: 1px solid lime;*/ }
+      font-size: 5px; }
       #scene3_2 .act1 .cat-shape5 + p {
         margin-bottom: 3em; }
   #scene3_2 .act2 {
@@ -443,8 +442,7 @@ Wrapping all content to prevent horizontal scrolling.
       font-size: 80%;
       position: absolute;
       left: 12rem;
-      z-index: 5;
-      outline: 1px solid red; }
+      z-index: 5; }
       #scene3_2 .act6 .cat-head .state {
         width: 100%;
         height: 100%;
