shape for cat paws content

--- a/css/style.css
+++ b/css/style.css
@@ -387,8 +387,9 @@ Wrapping all content to prevent horizontal scrolling.
       position: relative;
       margin-top: 18em;
       margin-left: 14em;
-      width: 30em;
-      height: 20em; }
+      width: 40em;
+      height: 20em;
+      -webkit-shape-inside: polygon(nonzero, 178px 246px, 270px 147px, 569px 147px, 573px 307px, 305px 414px, 254px 363px, 168px 317px, 0px 320px); }
     #scene3_2 .act3 .alice-shape {
       position: absolute;
       bottom: 0;
@@ -397,6 +398,7 @@ Wrapping all content to prevent horizontal scrolling.
       background: url(../images/alice_walking_3.png) left top no-repeat;
       background-size: contain; }
   #scene3_2 .act4 {
+    display: none;
     width: 50em;
     height: 53em;
     -webkit-perspective: 900px;
