--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
 @import url(../third-party/normalize/normalize.css);
+@-webkit-keyframes title-in {
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0em); } }
+
 @-webkit-keyframes fade-out {
   to {
     opacity: 0; } }
@@ -49,7 +54,8 @@
 
 html, body {
   height: 100%;
-  width: 100%; }
+  width: 100%;
+  background: rgba(0, 0, 0, 0); }
 
 body {
   margin: 0;
@@ -93,17 +99,12 @@ Wrapping all content to prevent horizontal scrolling.
   position: absolute;
   top: 0;
   z-index: 2;
-  width: 15px;
+  width: 0;
   height: 1000px;
   background: yellow; }
   #timeline div {
     position: absolute;
     width: 100%; }
-
-@-webkit-keyframes title-in {
-  100% {
-    opacity: 1;
-    -webkit-transform: translateY(0em); } }
 
 #scene1 {
   background: url(../images/bg_scn1.jpg) left top;
@@ -202,7 +203,7 @@ Wrapping all content to prevent horizontal scrolling.
         -webkit-transform-origin: left top;
         top: 0;
         -webkit-transform: translateZ(0);
-        /*         -webkit-filter: blur(6px)*/ }
+        -webkit-filter: blur(6px); }
       #scene2 .content .act2 .shadow1 {
         width: 10em;
         height: 60em;
