--- a/css/style.scss
+++ b/css/style.scss
@@ -27,7 +27,7 @@
 html, body{
   height: 100%;
   width: 100%;
-  //TODO: make background black
+  background: rgba(0,0,0,0);
 }
 
 body{
@@ -39,7 +39,7 @@ p{
   margin:0;
 }
 
-p+p{
+p + p{
   margin-top: 1.6em;
 }
 
@@ -80,22 +80,13 @@ Wrapping all content to prevent horizontal scrolling.
   position: absolute;
   top: 0;
   z-index: 2;
-  width: 15px;
+  width: 0;
   height: 1000px;
   background:yellow;
   
   div{
     position: absolute;
     width: 100%;
-  }
-}
-
-
-// TODO: move to _animations.scss
-@-webkit-keyframes title-in{
-  100% {
-    opacity: 1;
-    -webkit-transform: translateY(0em);
   }
 }
 
@@ -224,7 +215,7 @@ Wrapping all content to prevent horizontal scrolling.
          -webkit-transform-origin: left top;
          top: 0;       
          -webkit-transform: translateZ(0);
-/*         -webkit-filter: blur(6px)*/
+         -webkit-filter: blur(6px)
       }
       
       .shadow1{
