move title fade animation

--- a/css/_animations.scss
+++ b/css/_animations.scss
@@ -1,3 +1,10 @@
+@-webkit-keyframes title-in{
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0em);
+  }
+}
+
 @-webkit-keyframes fade-out{
   to {
     opacity: 0;
