--- a/css/style.scss
+++ b/css/style.scss
@@ -80,7 +80,7 @@ Wrapping all content to prevent horizontal scrolling.
   position: absolute;
   top: 0;
   z-index: 2;
-  width: 0;
+  width: 15px;
   height: 1000px;
   background:yellow;
   
@@ -272,7 +272,7 @@ Wrapping all content to prevent horizontal scrolling.
       
       .shadow4{
         -webkit-transition-duration: 1.8s;
-        -webkit-transition-delay: 0.2s;
+        -webkit-transition-delay: 0.4s;
       }                               
 
       .shadow5{
