--- a/css/style.scss
+++ b/css/style.scss
@@ -324,25 +324,83 @@ Wrapping all content to prevent horizontal scrolling.
     
     
     .dialogue{
-      // TODO: remove when working
-      display: none;
-      
       width: 65em;
       height: 100%;
       position: absolute;
       top: 0;
       right: 0;
+      outline: 1px solid red;
+      
+      .alice,
+      .caterpillar{
+        position: absolute;
+      }
+      
+      .alice{
+        -webkit-shape-inside: polygon(nonzero, 0px 0px, 212px 0px, 369px 138px, 371px 166px, 166px 165px, 142px 130px, 55px 113px);
+      }
+      
+      .caterpillar p{
+        text-align: right;
+        bottom: 0;
+        right: 0; 
+        width: 100%;
+        height: 100%;
+        outline: 1px solid lime;
+        overflow: hidden; 
+/*        -webkit-transform: translateZ(0); */
+        color: rgba(255,255,255,0.9);
+/*        -webkit-filter: drop-shadow(1px 0 2px rgba(0,0,0,0.7))*/
+      }
+    } 
+    
+    .dialogue2,
+    .dialogue3,
+    .dialogue4,
+    .dialogue5{
+      display: none;
     }
     
-    .dialogue1 .alice-speech{
-      width: 18em;
+    .dialogue1{
       
+      .alice{
+        top: 8em;
+        left: 8em;
+        width: 18em;
+      }
+      
+      .caterpillar{
+        top: 6em;
+        left: 24em;
+        
+        width: 12em;
+        height: 6em;
+        
+        p{
+/*          width: 0;*/
+/*          height: 0;*/
+          -webkit-shape-outside: ellipse(50%,50%,50%,50%);
+          -webkit-animation: speech 2s infinite ease-out;
+          -webkit-animation-fill-mode: forwards;
+        }
+      }
     }
     
   }/* end .content */
     
 }
 
+/*@-webkit-keyframes speech{
+  from{
+    width: 0;
+    height: 0;
+  }
+  to{
+    width: 100%;
+    height: 100%;
+  }
+}
+*/
 
 #scene3_1{
   background: url(../images/bg_scn2_part_r1_c1_s1.jpg) 0 top;
