--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,7 @@ Wrapping all content to prevent horizontal scrolling.
         -webkit-transform-origin: left top;
         top: 0;
         -webkit-transform: translateZ(0);
-        -webkit-filter: blur(6px); }
+        /*         -webkit-filter: blur(6px)*/ }
       #scene2 .content .act2 .shadow1 {
         width: 10em;
         height: 60em;
@@ -281,16 +281,17 @@ Wrapping all content to prevent horizontal scrolling.
       outline: 1px solid red; }
       #scene2 .content .dialogue .alice,
       #scene2 .content .dialogue .caterpillar {
-        position: absolute; }
+        position: absolute;
+        outline: 1px solid lime; }
       #scene2 .content .dialogue .alice {
         -webkit-shape-inside: polygon(nonzero, 0px 0px, 212px 0px, 369px 138px, 371px 166px, 166px 165px, 142px 130px, 55px 113px); }
       #scene2 .content .dialogue .caterpillar p {
+        position: absolute;
         text-align: right;
         bottom: 0;
         right: 0;
-        width: 100%;
-        height: 100%;
-        outline: 1px solid lime;
+        width: 0;
+        height: 0;
         overflow: hidden;
         /*        -webkit-transform: translateZ(0); */
         color: rgba(255, 255, 255, 0.9);
@@ -302,31 +303,26 @@ Wrapping all content to prevent horizontal scrolling.
       display: none; }
     #scene2 .content .dialogue1 .alice {
       top: 8em;
-      left: 8em;
-      width: 18em; }
+      left: 4em;
+      width: 18em;
+      opacity: 0; }
+      #scene2 .content .dialogue1 .alice.visible {
+        left: 8em;
+        opacity: 1; }
+      #scene2 .content .dialogue1 .alice.hidden {
+        left: 10em;
+        opacity: 0; }
     #scene2 .content .dialogue1 .caterpillar {
       top: 6em;
       left: 24em;
       width: 12em;
       height: 6em; }
       #scene2 .content .dialogue1 .caterpillar p {
-        /*          width: 0;*/
-        /*          height: 0;*/
-        -webkit-shape-outside: ellipse(50%, 50%, 50%, 50%);
-        -webkit-animation: speech 2s infinite ease-out;
-        -webkit-animation-fill-mode: forwards; }
+        -webkit-shape-outside: ellipse(50%, 50%, 50%, 50%); }
+        #scene2 .content .dialogue1 .caterpillar p.visible {
+          width: 12em;
+          height: 6em; }
 
-/*@-webkit-keyframes speech{
-  from{
-    width: 0;
-    height: 0;
-  }
-  to{
-    width: 100%;
-    height: 100%;
-  }
-}
-*/
 #scene3_1 {
   background: url(../images/bg_scn2_part_r1_c1_s1.jpg) 0 top;
   background-size: 100%;
