--- a/css/style.css
+++ b/css/style.css
@@ -281,10 +281,19 @@ Wrapping all content to prevent horizontal scrolling.
       outline: 1px solid red; }
       #scene2 .content .dialogue .alice,
       #scene2 .content .dialogue .caterpillar {
-        position: absolute;
-        outline: 1px solid lime; }
+        position: absolute; }
       #scene2 .content .dialogue .alice {
-        -webkit-shape-inside: polygon(nonzero, 0px 0px, 212px 0px, 369px 138px, 371px 166px, 166px 165px, 142px 130px, 55px 113px); }
+        -webkit-shape-inside: polygon(nonzero, 0px 0px, 212px 0px, 369px 138px, 371px 166px, 166px 165px, 142px 130px, 55px 113px);
+        top: 8em;
+        left: 4em;
+        width: 18em;
+        opacity: 0; }
+        #scene2 .content .dialogue .alice.visible {
+          left: 8em;
+          opacity: 1; }
+        #scene2 .content .dialogue .alice.hidden {
+          left: 10em;
+          opacity: 0; }
       #scene2 .content .dialogue .caterpillar p {
         position: absolute;
         text-align: right;
@@ -292,36 +301,50 @@ Wrapping all content to prevent horizontal scrolling.
         right: 0;
         width: 0;
         height: 0;
+        -webkit-shape-outside: ellipse(50%, 50%, 50%, 50%);
         overflow: hidden;
-        /*        -webkit-transform: translateZ(0); */
         color: rgba(255, 255, 255, 0.9);
         /*        -webkit-filter: drop-shadow(1px 0 2px rgba(0,0,0,0.7))*/ }
-    #scene2 .content .dialogue2,
-    #scene2 .content .dialogue3,
-    #scene2 .content .dialogue4,
-    #scene2 .content .dialogue5 {
-      display: none; }
-    #scene2 .content .dialogue1 .alice {
-      top: 8em;
-      left: 4em;
-      width: 18em;
-      opacity: 0; }
-      #scene2 .content .dialogue1 .alice.visible {
-        left: 8em;
-        opacity: 1; }
-      #scene2 .content .dialogue1 .alice.hidden {
-        left: 10em;
-        opacity: 0; }
     #scene2 .content .dialogue1 .caterpillar {
       top: 6em;
       left: 24em;
       width: 12em;
       height: 6em; }
-      #scene2 .content .dialogue1 .caterpillar p {
-        -webkit-shape-outside: ellipse(50%, 50%, 50%, 50%); }
-        #scene2 .content .dialogue1 .caterpillar p.visible {
-          width: 12em;
-          height: 6em; }
+      #scene2 .content .dialogue1 .caterpillar p.visible {
+        width: 12em;
+        height: 6em; }
+    #scene2 .content .dialogue2 .caterpillar {
+      top: 4em;
+      left: 24em;
+      width: 14em;
+      height: 6em; }
+      #scene2 .content .dialogue2 .caterpillar p.visible {
+        width: 14em;
+        height: 6em; }
+    #scene2 .content .dialogue3 .caterpillar {
+      top: 5em;
+      left: 27em;
+      width: 9em;
+      height: 6em; }
+      #scene2 .content .dialogue3 .caterpillar p.visible {
+        width: 9em;
+        height: 6em; }
+    #scene2 .content .dialogue4 .caterpillar {
+      top: 5em;
+      left: 27em;
+      width: 9em;
+      height: 6em; }
+      #scene2 .content .dialogue4 .caterpillar p.visible {
+        width: 9em;
+        height: 6em; }
+    #scene2 .content .dialogue5 .caterpillar {
+      top: 3em;
+      left: 22em;
+      width: 14em;
+      height: 8em; }
+      #scene2 .content .dialogue5 .caterpillar p.visible {
+        width: 14em;
+        height: 8em; }
 
 #scene3_1 {
   background: url(../images/bg_scn2_part_r1_c1_s1.jpg) 0 top;
