--- a/css/style.scss
+++ b/css/style.scss
@@ -334,11 +334,24 @@ Wrapping all content to prevent horizontal scrolling.
       .alice,
       .caterpillar{
         position: absolute;
-        outline: 1px solid lime;
       }
       
       .alice{
         -webkit-shape-inside: polygon(nonzero, 0px 0px, 212px 0px, 369px 138px, 371px 166px, 166px 165px, 142px 130px, 55px 113px);
+        top: 8em;
+        left: 4em;
+        width: 18em;
+        opacity: 0;
+
+        &.visible{
+          left: 8em;
+          opacity: 1;
+        }
+
+        &.hidden{
+          left: 10em;
+          opacity: 0;
+        }
       }
       
       .caterpillar p{
@@ -349,46 +362,21 @@ Wrapping all content to prevent horizontal scrolling.
         width: 0;
         height: 0;
         
+        -webkit-shape-outside: ellipse(50%,50%,50%,50%);
         overflow: hidden; 
-/*        -webkit-transform: translateZ(0); */
         color: rgba(255,255,255,0.9);
 /*        -webkit-filter: drop-shadow(1px 0 2px rgba(0,0,0,0.7))*/
       }
     } 
     
-    .dialogue2,
-    .dialogue3,
-    .dialogue4,
-    .dialogue5{
-      display: none;
-    }
-    
     .dialogue1{
       
-      .alice{
-        top: 8em;
-        left: 4em;
-        width: 18em;
-        opacity: 0;
-        
-        &.visible{
-          left: 8em;
-          opacity: 1;
-        }
-        
-        &.hidden{
-          left: 10em;
-          opacity: 0;
-        }
-      }
-      
       .caterpillar{
-        top: 6em;
-        left: 24em;
-        
         $w: 12em;
         $h: 6em;
         
+        top: 6em;
+        left: 24em;
         width: $w;
         height: $h;
         
@@ -397,11 +385,91 @@ Wrapping all content to prevent horizontal scrolling.
             width: $w;
             height: $h;
           }
-          
-          -webkit-shape-outside: ellipse(50%,50%,50%,50%);
         }
       }
     }
+    
+    
+    .dialogue2{
+      
+      .caterpillar{
+        $w: 14em;
+        $h: 6em;
+        
+        top: 4em;
+        left: 24em;
+        width: $w;
+        height: $h;
+        
+        p{ 
+          &.visible{
+            width: $w;
+            height: $h;
+          }
+        }
+      }
+    }
+    
+    .dialogue3{
+      
+      .caterpillar{
+        $w: 9em;
+        $h: 6em;
+        
+        top: 5em;
+        left: 27em;
+        width: $w;
+        height: $h;
+        
+        p{ 
+          &.visible{
+            width: $w;
+            height: $h;
+          }
+        }
+      }
+    }
+
+    .dialogue4{
+      
+      .caterpillar{
+        $w: 9em;
+        $h: 6em;
+        
+        top: 5em;
+        left: 27em;
+        width: $w;
+        height: $h;
+        
+        p{ 
+          &.visible{
+            width: $w;
+            height: $h;
+          }
+        }
+      }
+    }
+
+    .dialogue5{
+      
+      .caterpillar{
+        $w: 14em;
+        $h: 8em;
+        
+        top: 3em;
+        left: 22em;
+        width: $w;
+        height: $h;
+        
+        p{ 
+          &.visible{
+            width: $w;
+            height: $h;
+          }
+        }
+      }
+    }
+    
     
   }/* end .content */
     
