--- a/css/style.scss
+++ b/css/style.scss
@@ -215,6 +215,10 @@ Wrapping all content to prevent horizontal scrolling.
          -webkit-transform-origin: left top;
          top: 0;       
          -webkit-transform: translateZ(0);
+         -webkit-transition: all;
+         -webkit-transition-duration: 1.8s;
+         -webkit-transition-timing-function: cubic-bezier(.36,0,.27,1.08);
+         
 /*         -webkit-filter: blur(6px)*/
       }
       
@@ -264,21 +268,12 @@ Wrapping all content to prevent horizontal scrolling.
         background: -webkit-linear-gradient(65deg, rgba(0,0,0,0.9) 50%, transparent 85%);
       }
       
-      .shadow4,
-      .shadow5{
-        -webkit-transition: all;
-        -webkit-transition-timing-function: cubic-bezier(.36,0,.27,1.08);
-      }
-      
+      .shadow2,
       .shadow4{
         -webkit-transition-duration: 1.8s;
         -webkit-transition-delay: 0.4s;
       }                               
 
-      .shadow5{
-        -webkit-transition-duration: 1.8s;
-      }
-      
       
       // applay 'day' class to .act2 to run the shadow & caterpillar transition
       &.day{
@@ -329,7 +324,6 @@ Wrapping all content to prevent horizontal scrolling.
       position: absolute;
       top: 0;
       right: 0;
-      outline: 1px solid red;
       
       .alice,
       .caterpillar{
@@ -342,6 +336,8 @@ Wrapping all content to prevent horizontal scrolling.
         left: 4em;
         width: 18em;
         opacity: 0;
+        text-shadow: 2px 0 2px rgba(255,255,255,0.5);
+        
 
         &.visible{
           left: 8em;
@@ -365,6 +361,7 @@ Wrapping all content to prevent horizontal scrolling.
         -webkit-shape-outside: ellipse(50%,50%,50%,50%);
         overflow: hidden; 
         color: rgba(255,255,255,0.9);
+        text-shadow: 2px 0 4px rgba(0,0,0,0.8);
 /*        -webkit-filter: drop-shadow(1px 0 2px rgba(0,0,0,0.7))*/
       }
     } 
