--- a/css/style.css
+++ b/css/style.css
@@ -198,6 +198,13 @@ Wrapping all content to prevent horizontal scrolling.
       left: 42em;
       top: 0;
       /* end .caterpillar-shape */ }
+      #scene2 .content .act2 .shadow-container {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        -webkit-filter: blur(6px); }
       #scene2 .content .act2 .shadow {
         position: absolute;
         -webkit-transform-origin: left top;
@@ -205,8 +212,7 @@ Wrapping all content to prevent horizontal scrolling.
         -webkit-transform: translateZ(0);
         -webkit-transition: all;
         -webkit-transition-duration: 1.8s;
-        -webkit-transition-timing-function: cubic-bezier(0.36, 0, 0.27, 1.08);
-        /*         -webkit-filter: blur(6px)*/ }
+        -webkit-transition-timing-function: cubic-bezier(0.36, 0, 0.27, 1.08); }
       #scene2 .content .act2 .shadow1 {
         width: 10em;
         height: 60em;
@@ -285,7 +291,7 @@ Wrapping all content to prevent horizontal scrolling.
         left: 4em;
         width: 18em;
         opacity: 0;
-        text-shadow: 2px 0 2px rgba(255, 255, 255, 0.5); }
+        text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.4); }
         #scene2 .content .dialogue .alice.visible {
           left: 8em;
           opacity: 1; }
