--- a/css/style.scss
+++ b/css/style.scss
@@ -210,6 +210,15 @@ Wrapping all content to prevent horizontal scrolling.
       left: 42em;
       top: 0;
       
+      .shadow-container{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+                 -webkit-filter: blur(6px)
+      }
+      
       .shadow{
          position: absolute;
          -webkit-transform-origin: left top;
@@ -218,8 +227,6 @@ Wrapping all content to prevent horizontal scrolling.
          -webkit-transition: all;
          -webkit-transition-duration: 1.8s;
          -webkit-transition-timing-function: cubic-bezier(.36,0,.27,1.08);
-         
-/*         -webkit-filter: blur(6px)*/
       }
       
       .shadow1{
@@ -336,7 +343,7 @@ Wrapping all content to prevent horizontal scrolling.
         left: 4em;
         width: 18em;
         opacity: 0;
-        text-shadow: 2px 0 2px rgba(255,255,255,0.5);
+        text-shadow: 1px 1px 1px rgba(255,255,255,0.4);
         
 
         &.visible{
