--- a/css/style.css
+++ b/css/style.css
@@ -99,9 +99,7 @@ Wrapping all content to prevent horizontal scrolling.
   position: absolute;
   top: 0;
   z-index: 2;
-  width: 15px;
-  height: 1000px;
-  background: yellow; }
+  width: 0; }
   #timeline div {
     position: absolute;
     width: 100%; }
