--- a/css/style.scss
+++ b/css/style.scss
@@ -95,9 +95,10 @@ Wrapping all content to prevent horizontal scrolling.
 
 #timeline{
   position: absolute;
-  top: 0;
-  z-index: 2;
-  width: 0;
+  top: 0; 
+  z-index: 5;
+  width: 15px;
+  height: 1000px;
   
   div{
     position: absolute;
@@ -231,7 +232,7 @@ Wrapping all content to prevent horizontal scrolling.
         left: 0;
         width: 100%;
         height: 100%;
-                 -webkit-filter: blur(6px)
+/*         -webkit-filter: blur(6px)*/
       }
       
       .shadow{
@@ -642,6 +643,8 @@ Wrapping all content to prevent horizontal scrolling.
     }
     
     .content-wrapper{
+      opacity: 0;  
+      visibility: hidden;
       position: relative;
       margin-top: 18em;
       margin-left: 14em;
@@ -650,7 +653,9 @@ Wrapping all content to prevent horizontal scrolling.
       -webkit-shape-inside: polygon(nonzero, 178px 246px, 270px 147px, 569px 147px, 573px 307px, 305px 414px, 254px 363px, 168px 317px, 0px 320px);
     }
     
-    .alice-shape{
+    .alice-shape{ 
+      opacity: 0;
+      visibility: hidden;
       position: absolute;
       bottom: 0; 
       height: 26.35em;
@@ -661,25 +666,24 @@ Wrapping all content to prevent horizontal scrolling.
   }
   
   .act4{
-    display: none;
     width: 50em;
     height: 53em;
     -webkit-perspective: 900px;
     left: 124em;
     
     .alice-shape{
+      opacity: 0;
+      visibility: hidden;
       position: absolute;
       bottom: 0; 
       height: 26.35em;
       width: 11.9em;
       background: url(../images/alice_walking_4.png) left top no-repeat;
       background-size: contain; 
-      opacity: 0;
-      -webkit-animation: alice-act-in 0.5s 1 ease-in-out;
-      -webkit-animation-fill-mode: forwards;
     }
     
     .content-wrapper{
+      opacity: 0;
       width: 30em;
       height: 18em;
       margin: 25em 0 0 15em;
