--- a/css/style.css
+++ b/css/style.css
@@ -132,9 +132,7 @@ Wrapping all content to prevent horizontal scrolling.
 #timeline {
   position: absolute;
   top: 0;
-  z-index: 5;
-  width: 15px;
-  height: 1000px; }
+  z-index: 5; }
   #timeline div {
     position: absolute;
     width: 100%; }
@@ -338,11 +336,10 @@ Wrapping all content to prevent horizontal scrolling.
         right: 0;
         width: 0;
         height: 0;
-        -webkit-shape-outside: ellipse(50%, 50%, 50%, 50%);
+        -webkit-shape-inside: ellipse(50%, 50%, 50%, 50%);
         overflow: hidden;
         color: rgba(255, 255, 255, 0.9);
-        text-shadow: 2px 0 4px rgba(0, 0, 0, 0.8);
-        /*        -webkit-filter: drop-shadow(1px 0 2px rgba(0,0,0,0.7))*/ }
+        text-shadow: 2px 0 4px rgba(0, 0, 0, 0.8); }
     #scene2 .content .dialogue1 .caterpillar {
       top: 6em;
       left: 24em;
