reinstate blur for shadows

--- a/css/style.scss
+++ b/css/style.scss
@@ -230,7 +230,7 @@ Wrapping all content to prevent horizontal scrolling.
         left: 0;
         width: 100%;
         height: 100%;
-/*         -webkit-filter: blur(6px)*/
+         -webkit-filter: blur(5px)
       }
       
       .shadow{
