--- a/css/style.css
+++ b/css/style.css
@@ -235,7 +235,7 @@ Wrapping all content to prevent horizontal scrolling.
         left: 0;
         width: 100%;
         height: 100%;
-        /*         -webkit-filter: blur(6px)*/ }
+        -webkit-filter: blur(5px); }
       #scene2 .content .act2 .shadow {
         position: absolute;
         -webkit-transform-origin: left top;
