--- a/css/style.css
+++ b/css/style.css
@@ -302,11 +302,11 @@ Wrapping all content to prevent horizontal scrolling.
         #scene2 .content .act2 .caterpillar-shape.light {
           -webkit-transition: all 1s 0.2s ease-in;
           opacity: 0;
-          background: url(../images/caterpillar-day.png) top left no-repeat; }
+          background: url(../images/caterpillar-day.png) top left/contain; }
         #scene2 .content .act2 .caterpillar-shape.dark {
           -webkit-transition: all 2s ease-out;
           opacity: 1;
-          background: url(../images/caterpillar-night.png) top left no-repeat; }
+          background: url(../images/caterpillar-night.png) top left/contain; }
     #scene2 .content .dialogue {
       width: 65em;
       height: 100%;
