make everything font-size relative

--- a/css/style.css
+++ b/css/style.css
@@ -103,8 +103,7 @@ p + p {
 
 .content-wrapper p,
 .content p {
-  /* Keeps font-size consistent with root. */
-  font-size: 1rem;
+  font-size: 1em;
   font-family: Georgia,serif; }
 
 /* 
@@ -397,40 +396,40 @@ Wrapping all content to prevent horizontal scrolling.
     padding-top: 2em; }
   #scene3_1 .cat-shape1 {
     float: left;
-    -webkit-shape-margin: 1rem;
-    font-size: 8px;
-    margin-left: 28rem;
+    -webkit-shape-margin: 2em;
+    font-size: 0.5em;
+    margin-left: 54em;
     visibility: visible; }
     #scene3_1 .cat-shape1 + p {
       padding-top: 2em;
       clear: right;
       display: block;
-      margin-bottom: 10rem; }
+      margin-bottom: 10em; }
   #scene3_1 .cat-shape2 {
     float: right;
-    font-size: 7px;
-    -webkit-shape-margin: 1rem; }
+    font-size: 0.45em;
+    -webkit-shape-margin: 2em; }
     #scene3_1 .cat-shape2 + p {
       display: block;
       clear: left;
-      margin-bottom: 7rem; }
+      margin-bottom: 7em; }
   #scene3_1 .cat-shape3 {
     float: left;
-    margin-left: 10rem;
-    -webkit-shape-margin: 1rem;
-    font-size: 7px; }
+    margin-left: 20em;
+    -webkit-shape-margin: 2em;
+    font-size: 0.45em; }
     #scene3_1 .cat-shape3 + p {
-      margin-bottom: 4rem; }
+      margin-bottom: 4em; }
   #scene3_1 .cat-shape4 {
     float: right;
-    -webkit-shape-margin: 1rem;
-    font-size: 7px;
-    margin-right: 20rem; }
+    -webkit-shape-margin: 2em;
+    font-size: 0.45em;
+    margin-right: 40em; }
 
 .cat-shape-walking {
   float: left;
   -webkit-shape-margin: 1em;
-  font-size: 6px; }
+  font-size: 0.36em; }
   .cat-shape-walking + p {
     margin-bottom: 3em; }
 
@@ -438,9 +437,7 @@ Wrapping all content to prevent horizontal scrolling.
   background: black url(../images/bg_scn2_part_r2_c1_s1.jpg) 0 top no-repeat;
   background-size: 100%;
   width: 278.75em;
-  height: 91.25em;
-  left: -2500px;
-  top: -300px; }
+  height: 91.25em; }
   #scene3_2 .content {
     width: 278.75em;
     height: 80em;
@@ -454,9 +451,9 @@ Wrapping all content to prevent horizontal scrolling.
     left: 16em; }
     #scene3_2 .act1 .cat-shape5 {
       float: right;
-      margin-top: 13rem;
-      -webkit-shape-margin: 1rem;
-      font-size: 5px; }
+      margin-top: 33em;
+      -webkit-shape-margin: 2em;
+      font-size: 0.38em; }
       #scene3_2 .act1 .cat-shape5 + p {
         margin-bottom: 3em; }
   #scene3_2 .act2 {
@@ -466,7 +463,7 @@ Wrapping all content to prevent horizontal scrolling.
     #scene3_2 .act2 .content-wrapper {
       width: 100%;
       height: 100%;
-      -webkit-shape-inside: polygon(nonzero, 113px 59px, 297px 161px, 368px 236px, 481px 261px, 317px 464px, 256px 541px, 113px 528px, 89px 414px); }
+      -webkit-shape-inside: polygon(nonzero, 113px 59px, 297px 161px, 368px 236px, 481px 261px, 317px 464px, 256px 541px, 113px 528px, -166px 307px); }
     #scene3_2 .act2 .cat-shape {
       position: absolute;
       bottom: 0;
@@ -499,12 +496,10 @@ Wrapping all content to prevent horizontal scrolling.
       bottom: 0;
       height: 26.35em;
       width: 11.9em;
-      background: url(../images/alice_walking_3.png) left top no-repeat;
-      background-size: contain; }
+      background: url(../images/alice_walking_3.png) left top/contain; }
   #scene3_2 .act4 {
     width: 50em;
     height: 53em;
-    -webkit-perspective: 900px;
     left: 124em; }
     #scene3_2 .act4 .alice-shape {
       opacity: 0;
@@ -543,9 +538,9 @@ Wrapping all content to prevent horizontal scrolling.
     #scene3_2 .act6 .cat-head {
       width: 20.75em;
       height: 20.75em;
-      font-size: 80%;
+      font-size: 0.8em;
       position: absolute;
-      left: 12rem;
+      left: 15em;
       z-index: 5; }
       #scene3_2 .act6 .cat-head .state {
         width: 100%;
@@ -597,7 +592,7 @@ Wrapping all content to prevent horizontal scrolling.
       -webkit-shape-inside: polygon(nonzero, 46px 0px, 206px 0px, 183px 74px, 200px 103px, 321px 158px, 321px 307px, 242px 328px, 242px 405px, 274px 448px, 207px 482px, 7px 465px); }
     #scene3_2 .act6 #region2 {
       float: left;
-      margin-left: 1.5rem;
+      margin-left: 1.5em;
       width: 23em;
       margin-top: 10%;
       height: 50%;
