--- a/css/style.scss
+++ b/css/style.scss
@@ -132,6 +132,10 @@ Wrapping all content to prevent horizontal scrolling.
   height: 75em;
   width: 118.75em;
   position: relative;
+  
+  @media all and (max-width: 1280px){
+    margin-left: -18em;
+  }
 
   .content{
     position: relative;
