--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,122 @@
   -webkit-transform: translateZ(0);
   -webkit-animation: float 8s infinite ease-in-out; }
 
+/**
+ *
+ * Copyright (c) 2013 Adobe Systems Incorporated. All rights reserved.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ * 
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ *
+ */
+.no-shape-inside #intro .warning {
+  display: block; }
+
+.no-shape-inside #intro .direction {
+  display: none; }
+
+.no-shape-inside nav,
+.no-shape-inside .wrapper {
+  display: none; }
+
+#intro {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  -webkit-transition: opacity 0.5s ease-in;
+  z-index: 7;
+  box-sizing: border-box;
+  width: 40rem;
+  min-height: 7rem;
+  max-height: 50%;
+  background: #fcfcfc;
+  outline: 99em solid rgba(0, 0, 0, 0.7); }
+  #intro.hidden {
+    display: none; }
+  #intro.hide {
+    opacity: 0; }
+  #intro a {
+    white-space: nowrap; }
+  #intro p {
+    padding: 1rem 3rem;
+    color: #333; }
+  #intro .warning {
+    display: none;
+    background: #ffc;
+    padding: 1rem 0; }
+  #intro .direction {
+    display: -webkit-flex;
+    -webkit-align-items: center;
+    padding: 2rem 3rem 0; }
+    #intro .direction .illustration {
+      float: left;
+      width: 2rem;
+      margin-right: 1rem; }
+    #intro .direction span {
+      width: 100%;
+      height: 1rem;
+      background: lime;
+      display: block;
+      opacity: 1;
+      -webkit-animation-name: fade;
+      -webkit-animation-duration: 1s;
+      -webkit-animation-iteration-count: infinite; }
+      #intro .direction span + span {
+        margin-top: 1rem; }
+      #intro .direction span:nth-child(2) {
+        -webkit-animation-delay: 1s; }
+      #intro .direction span:nth-child(3) {
+        -webkit-animation-delay: 1.5s; }
+  #intro header {
+    padding: 3rem 3rem 0;
+    font-size: 2em;
+    font-weight: bolder;
+    letter-spacing: -0.02em;
+    font-family: Helvetica, Arial, sans-serif; }
+  #intro footer {
+    box-sizing: border-box;
+    position: absolute;
+    bottom: 0;
+    padding: 0 2rem;
+    width: 100%; }
+    #intro footer a {
+      float: right;
+      text-indent: -99em;
+      overflow: hidden; }
+      #intro footer a + a {
+        margin-right: 1.5rem; }
+    #intro footer .ultranoir-logo {
+      width: 3.8rem;
+      height: 4.5rem;
+      background: url(../images/logo-ultranoir.svg) center top/contain;
+      background-repeat: no-repeat; }
+    #intro footer .adobe-logo {
+      width: 2.7rem;
+      height: 4.5rem;
+      background: url(../images/logo-adobe-bottom.svg) center bottom/contain; }
+
+@-webkit-keyframes fade {
+  0% {
+    opacity: 1; }
+
+  70% {
+    opacity: 0.2; }
+
+  100% {
+    opacity: 1; } }
+
 html, body {
   height: 100%;
   width: 100%;
