--- a/css/style.css
+++ b/css/style.css
@@ -429,6 +429,11 @@ nav {
         top: -2em;
         -webkit-transform: rotate(-7deg);
         background: -webkit-linear-gradient(65deg, rgba(0, 0, 0, 0.9) 50%, transparent 85%); }
+      #scene2 .content .act2 .shadow1,
+      #scene2 .content .act2 .shadow3,
+      #scene2 .content .act2 .shadow5 {
+        -webkit-transition-duration: 1.2s;
+        -webkit-transition-delay: 0.8s; }
       #scene2 .content .act2 .shadow2,
       #scene2 .content .act2 .shadow4 {
         -webkit-transition-duration: 1.8s;
@@ -438,8 +443,7 @@ nav {
       #scene2 .content .act2.day .caterpillar-shape.dark {
         opacity: 0;
         -webkit-filter: blur(7px); }
-      #scene2 .content .act2.day .shadow4,
-      #scene2 .content .act2.day .shadow5 {
+      #scene2 .content .act2.day .shadow {
         opacity: 0; }
       #scene2 .content .act2 .caterpillar-shape {
         position: absolute;
@@ -471,8 +475,7 @@ nav {
         top: 8em;
         left: 4em;
         width: 18em;
-        opacity: 0;
-        text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.4); }
+        opacity: 0; }
         #scene2 .content .dialogue .alice.visible {
           left: 8em;
           opacity: 1; }
@@ -489,7 +492,7 @@ nav {
         -webkit-shape-inside: ellipse(50%, 50%, 50%, 50%);
         overflow: hidden;
         color: rgba(255, 255, 255, 0.9);
-        text-shadow: 2px 0 4px rgba(0, 0, 0, 0.8); }
+        text-shadow: 2px 0 2px rgba(0, 0, 0, 0.8); }
     #scene2 .content .dialogue1 .caterpillar {
       top: 6em;
       left: 24em;
@@ -614,7 +617,7 @@ nav {
     #scene3_2 .act2 .content-wrapper {
       width: 100%;
       height: 100%;
-      -webkit-shape-inside: polygon(nonzero, 113px 59px, 297px 161px, 368px 236px, 481px 261px, 317px 464px, 256px 541px, 113px 528px, -166px 307px); }
+      -webkit-shape-inside: polygon(nonzero, 127px 12px, 389px 230px, 481px 261px, 489px 330px, 438px 358px, 366px 368px, 343px 427px, 369px 459px, 352px 532px, 260px 530px, 223px 544px, 196px 564px, 190px 578px, 86px 576px, 103px 510px, -26px 418px, -26px 183px); }
     #scene3_2 .act2 .cat-shape {
       position: absolute;
       bottom: 0;
